--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
    </div>
    <p style="text-align:justify;color: whitesmoke;">This game was inspired from the classic chrome dinosaur game.
        All you have to do is jump the character by pressing the screen,
-        without hitting the obsticle.Enjoy! Made by Arjun S</p>
+        without hitting the obsticle.Enjoy! </p>
       
 
    
